# AI-shopping-analyzer

./: .gitignore
backend/: pyproject.toml
backend/app/api/: auth_login.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: request.py  response.py
backend/app/services/: auth_service.py
