[project]
name = "backend"
version = "0.1.0"
description = "Backend for AI-shopping analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
